[package]
name = "minigrep"
version = "0.1.0"
authors = ["Alejandro V.  alejandrovieyra7@gmail.com"]
description = "A tool to search text in files"
readme = "README.md"
edition = "2021"
repository = "https://github.com/draco404/minigrep"
keywords = ["cli", "search"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
regex = "1.6.0"
clap = { version = "4.0.18", features = ["derive", "cargo"] }
arboard = "3.1.1"